--- a/git/github.config
+++ b/git/github.config
@@ -4,7 +4,7 @@
 	email = twiccox@gmail.com
 
 	# TODO: add GPG key ID
-	# NOTE: GPG key ID could be in 8-digit (short) format.
+	# NOTE: GPG key ID could be 8-digit (short) format.
 	# To find the key ID, run:
 	# $ gpg --list-secret-keys --keyid-format SHORT
 	signingKey = [GPG key ID]
